--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weekly Budget Tracker</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f0f2f5;
@@ -45,21 +47,18 @@
       justify-content: center;
     }
     .store-button {
-      width: 48px;
-      height: 48px;
+      width: auto;
+      min-width: 80px;
+      padding: 10px 12px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 500;
       background-color: #fff;
       border: 1px solid #ccc;
       border-radius: 8px;
-      padding: 5px;
+      text-align: center;
       cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .store-button img {
-      max-width: 32px;
-      max-height: 32px;
+      font-size: 0.9rem;
     }
     .transaction {
       border-bottom: 1px solid #ccc;
@@ -97,7 +96,16 @@
   </div>
 
   <div class="store-icons">
-    <!-- Store icons here -->
+    <button class="store-button" onclick="setDescription('Tim Hortons')">Tim Hortons</button>
+    <button class="store-button" onclick="setDescription('Pizza Pizza')">Pizza Pizza</button>
+    <button class="store-button" onclick="setDescription('Walmart')">Walmart</button>
+    <button class="store-button" onclick="setDescription('Fresco')">Fresco</button>
+    <button class="store-button" onclick="setDescription('Shoppers Drug Mart')">Shoppers Drug Mart</button>
+    <button class="store-button" onclick="setDescription('Popeyes')">Popeyes</button>
+    <button class="store-button" onclick="setDescription('Amazon')">Amazon</button>
+    <button class="store-button" onclick="setDescription('Dollarama')">Dollarama</button>
+    <button class="store-button" onclick="setDescription('Fortinos')">Fortinos</button>
+    <button class="store-button" onclick="setDescription('Home Depot')">Home Depot</button>
   </div>
 
   <form id="transaction-form">
@@ -113,7 +121,7 @@
     const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycby8Xycbq4Qf9RAovJF13GRFngm17oIi7AOSWYOobr98b7pJ00n3yo1Fmc6r2PLZv7QB/exec";
 
     function getWeekKey(date = new Date()) {
-      const dayOffset = date.getDay(); // Sunday = 0
+      const dayOffset = date.getDay();
       const sunday = new Date(date);
       sunday.setDate(sunday.getDate() - dayOffset);
       return sunday.toISOString().split('T')[0];
