--- a/index.html
+++ b/index.html
@@ -47,18 +47,21 @@
       justify-content: center;
     }
     .store-button {
-      width: auto;
-      min-width: 80px;
-      padding: 10px 12px;
       font-family: 'Roboto', sans-serif;
       font-weight: 500;
       background-color: #fff;
       border: 1px solid #ccc;
       border-radius: 8px;
+      padding: 10px 14px;
       text-align: center;
       cursor: pointer;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       font-size: 0.9rem;
+      min-width: 100px;
+      transition: background-color 0.2s;
+    }
+    .store-button:hover {
+      background-color: #f1f1f1;
     }
     .transaction {
       border-bottom: 1px solid #ccc;
