--- a/index.html
+++ b/index.html
@@ -1,80 +1,76 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weekly Budget Tracker</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0f2f5;
+      background: #f4f6f8;
       padding: 20px;
       max-width: 600px;
       margin: auto;
-      color: #333;
     }
     h1 {
       text-align: center;
+      margin-bottom: 30px;
     }
-    .budget-settings {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    input, button, select {
-      padding: 10px;
-      margin: 5px 0;
+    input, select, button {
       width: 100%;
+      padding: 10px;
+      margin: 6px 0;
+      border-radius: 6px;
       border: 1px solid #ccc;
-      border-radius: 8px;
       box-sizing: border-box;
     }
     button {
       background-color: #007bff;
       color: white;
+      font-weight: bold;
       cursor: pointer;
     }
     button:hover {
       background-color: #0056b3;
     }
     .transaction {
-      border-bottom: 1px solid #ccc;
-      padding: 5px 0;
-      font-size: 0.95rem;
+      background: white;
+      border-left: 4px solid #007bff;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 6px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    .transaction-text {
-      flex-grow: 1;
-    }
-    .delete-button {
-      background: red;
-      color: white;
+    .delete-btn {
+      background: #dc3545;
       border: none;
+      color: white;
+      padding: 4px 10px;
       border-radius: 4px;
-      padding: 3px 6px;
+      font-size: 0.9em;
       cursor: pointer;
-      margin-left: 10px;
     }
     .balance {
       font-weight: bold;
+      font-size: 1.2em;
       margin-top: 20px;
-      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
   <h1>Weekly Budget Tracker</h1>
 
-  <div class="budget-settings">
-    <input type="number" id="starting-budget" placeholder="Set Weekly Budget">
-    <button onclick="updateBudget()">Set Budget</button>
+  <div>
+    <input type="number" id="starting-budget" placeholder="Set Weekly Budget" />
+    <button onclick="setBudget()">Set Budget</button>
   </div>
 
   <form id="transaction-form">
-    <select id="vendor-select" required></select>
-    <input type="number" id="amount" placeholder="Amount" required>
+    <select id="vendor-select"></select>
+    <input type="number" id="amount" placeholder="Amount" required />
     <button type="submit">Add Transaction</button>
   </form>
 
@@ -82,104 +78,80 @@
   <div id="transactions"></div>
 
   <script>
-    const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbxIBDX-ny3nfzVIA9tpmzt8Vx1--zLizxfZCgQyF5eQIzNI423_gugKJfj4GEOYBsxL/exec";
-    let transactions = [];
-    let vendors = [
-      "Tim Hortons", "Pizza Pizza", "Walmart", "Fresco",
-      "Shoppers Drug Mart", "Popeyes", "Amazon",
-      "Dollarama", "Fortinos", "Home Depot"
-    ];
-    let MAX_BUDGET = 0;
+    const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycby8Xycbq4Qf9RAovJF13GRFngm17oIi7AOSWYOobr98b7pJ00n3yo1Fmc6r2PLZv7QB/exec";
 
-    async function loadData() {
-      try {
-        const res = await fetch(SHEET_WEBHOOK_URL);
-        const data = await res.json();
-        transactions = data.transactions || [];
-        MAX_BUDGET = parseFloat(data.budget) || 0;
-        renderVendorOptions();
-        renderTransactions();
-        updateBalance();
-      } catch (err) {
-        console.error("Failed to load data", err);
+    let transactions = [];
+    let vendors = [];
+    let budget = 0;
+
+    async function fetchData() {
+      const res = await fetch(SHEET_WEBHOOK_URL);
+      const data = await res.json();
+      transactions = data.transactions || [];
+      vendors = data.vendors || [];
+      budget = parseFloat(data.budget) || 0;
+      updateUI();
+    }
+
+    function updateUI() {
+      const balance = budget - transactions.reduce((sum, tx) => sum + parseFloat(tx.amount), 0);
+      document.getElementById("balance").textContent = "Remaining: $" + balance.toFixed(2);
+
+      const vendorSelect = document.getElementById("vendor-select");
+      vendorSelect.innerHTML = "";
+      vendors.forEach(v => {
+        const option = document.createElement("option");
+        option.value = v;
+        option.textContent = v;
+        vendorSelect.appendChild(option);
+      });
+
+      const transactionsDiv = document.getElementById("transactions");
+      transactionsDiv.innerHTML = "";
+      transactions.forEach((tx, index) => {
+        const div = document.createElement("div");
+        div.className = "transaction";
+        const readableDate = new Date(tx.timestamp).toLocaleString("en-US", { weekday: "short", hour: "2-digit", minute: "2-digit" });
+        div.innerHTML = `<span>${readableDate} - ${tx.description}: $${tx.amount}</span>
+                         <button class="delete-btn" onclick="deleteTransaction(${index})">X</button>`;
+        transactionsDiv.appendChild(div);
+      });
+    }
+
+    function setBudget() {
+      const newBudget = parseFloat(document.getElementById("starting-budget").value);
+      if (!isNaN(newBudget) && newBudget > 0) {
+        budget = newBudget;
+        saveData();
       }
     }
 
-    function updateBalance() {
-      const totalSpent = transactions.reduce((sum, tx) => sum + parseFloat(tx.amount), 0);
-      const remaining = (MAX_BUDGET - totalSpent).toFixed(2);
-      document.getElementById("balance").textContent = `Remaining: $${remaining}`;
+    function deleteTransaction(index) {
+      transactions.splice(index, 1);
+      saveData();
     }
 
-    function renderVendorOptions() {
-      const vendorSelect = document.getElementById("vendor-select");
-      vendorSelect.innerHTML = '';
-      vendors.forEach(v => {
-        const opt = document.createElement("option");
-        opt.value = v;
-        opt.textContent = v;
-        vendorSelect.appendChild(opt);
-      });
-    }
-
-    function renderTransactions() {
-      const container = document.getElementById("transactions");
-      container.innerHTML = '';
-      transactions.forEach((tx, idx) => {
-        const div = document.createElement("div");
-        div.className = "transaction";
-        const text = document.createElement("div");
-        text.className = "transaction-text";
-        const day = new Date(tx.timestamp).toLocaleDateString('en-US', { weekday: 'short' });
-        text.textContent = `${day}, ${tx.timestamp} - ${tx.description}: -$${tx.amount}`;
-
-        const del = document.createElement("button");
-        del.className = "delete-button";
-        del.textContent = "X";
-        del.onclick = () => {
-          transactions.splice(idx, 1);
-          saveToSheet();
-          renderTransactions();
-          updateBalance();
-        };
-
-        div.appendChild(text);
-        div.appendChild(del);
-        container.appendChild(div);
-      });
-    }
-
-    document.getElementById("transaction-form").addEventListener("submit", e => {
+    document.getElementById("transaction-form").addEventListener("submit", function (e) {
       e.preventDefault();
       const description = document.getElementById("vendor-select").value;
       const amount = parseFloat(document.getElementById("amount").value);
-      if (!description || isNaN(amount) || amount <= 0) return;
-      const timestamp = new Date().toLocaleString();
-      transactions.push({ description, amount, timestamp });
-      saveToSheet();
-      renderTransactions();
-      updateBalance();
-      e.target.reset();
+      const timestamp = new Date().toISOString();
+      if (description && !isNaN(amount)) {
+        transactions.push({ description, amount, timestamp });
+        saveData();
+        e.target.reset();
+      }
     });
 
-    function updateBudget() {
-      const newBudget = parseFloat(document.getElementById("starting-budget").value);
-      if (!isNaN(newBudget) && newBudget > 0) {
-        MAX_BUDGET = newBudget;
-        saveToSheet();
-        updateBalance();
-      }
-    }
-
-    function saveToSheet() {
+    function saveData() {
       fetch(SHEET_WEBHOOK_URL, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ transactions, vendors, budget: MAX_BUDGET })
-      });
+        body: JSON.stringify({ transactions, vendors, budget })
+      }).then(fetchData);
     }
 
-    loadData();
+    fetchData();
   </script>
 </body>
 </html>
