--- a/index.html
+++ b/index.html
@@ -2,25 +2,183 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Weekly Budget Tracker</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --background: #0f1117;
+      --card: #1c1f26;
+      --primary: #4ade80;
+      --primary-dark: #22c55e;
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --danger: #ef4444;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: var(--background);
+      color: var(--text);
+      padding: 2rem;
+      display: flex;
+      justify-content: center;
+    }
+
+    .container {
+      max-width: 480px;
+      width: 100%;
+      background: var(--card);
+      border-radius: 12px;
+      padding: 2rem;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    }
+
+    h1, h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    .week-display {
+      text-align: center;
+      font-size: 0.95rem;
+      color: var(--muted);
+      margin-bottom: 1.5rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      margin-bottom: 2rem;
+    }
+
+    input, select {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 8px;
+      background: #2a2e37;
+      color: var(--text);
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: none;
+      background-color: var(--primary);
+      color: #000;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.2s ease-in-out;
+    }
+
+    button:hover {
+      background: var(--primary-dark);
+    }
+
+    .info {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.95rem;
+    }
+
+    th, td {
+      padding: 0.75rem;
+      text-align: center;
+    }
+
+    th {
+      color: var(--muted);
+      border-bottom: 1px solid #333;
+    }
+
+    .delete-btn {
+      background: var(--danger);
+      border: none;
+      border-radius: 6px;
+      padding: 6px 10px;
+      color: white;
+      cursor: pointer;
+    }
+
+    @media (max-width: 500px) {
+      body {
+        padding: 1rem;
+      }
+
+      .container {
+        padding: 1.5rem;
+      }
+
+      th, td {
+        font-size: 0.85rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Weekly Budget Tracker</h1>
-    <div class="budget-input">
-      <input type="number" id="weeklyBudget" placeholder="Set Weekly Budget"/>
-      <button type="button" onclick="setBudget()">Set Budget</button>
-    </div>
-    <div class="transaction-input">
-      <select id="vendorDropdown"></select>
-      <input type="number" id="amount" placeholder="Amount"/>
-      <button type="button" onclick="addTransaction()">Add Transaction</button>
-    </div>
-    <h2 id="remaining">Remaining: $0.00</h2>
-    <ul id="transactionList"></ul>
+    <div class="week-display" id="week-range">Loading week...</div>
+
+    <h2>Set Weekly Budget</h2>
+    <form id="budget-form">
+      <input type="number" id="budget" placeholder="Enter weekly budget" required />
+      <button type="submit">Set Budget</button>
+    </form>
+
+    <div class="info">Remaining Budget: $<span id="remaining">0.00</span></div>
+
+    <h2>Add Transaction</h2>
+    <form id="transaction-form">
+      <select id="vendor" required>
+        <option value="">Select vendor</option>
+        <option value="Amazon">Amazon</option>
+        <option value="Pizza Pizza">Pizza Pizza</option>
+	<option value="No Frills">No Frills</option>
+	<option value="Fortinos">Fortinos</option>
+	<option value="Dollarama">Dollarama</option>
+	<option value="Tim Hortons">Tim Hortons</option>
+	<option value="Popeyes">Popeyes</option>
+	<option value="Rec Center Snack">Rec Center Snack</option>
+	<option value="Shoppers">Shoppers</option>
+	<option value="Chaiiwala">Chaiiwala</option>
+	<option value="Home Depot">Home Depot</option>
+        <option value="Walmart">Walmart</option>
+        <option value="Costco">Costco</option>
+        <option value="Freshco">Freshco</option>
+      </select>
+      <input type="number" id="amount" placeholder="Amount in dollars" required />
+      <button type="submit">Add Transaction</button>
+    </form>
+
+    <h2>Transactions</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Vendor</th>
+          <th>Amount</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody id="transactions-body"></tbody>
+    </table>
   </div>
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
