--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
   </style>
 </head>
 <body>
+  <div style="display: flex; justify-content: flex-end; padding: 1rem;">
+    <button id="auth">Login / Sign Up</button>
+  </div>
+
   <div class="container">
     <h1>Weekly Budget Tracker</h1>
-    <button id="auth">Login / Sign Up</button>
     <div class="week-display" id="week-range">Loading week...</div>
 
     <h2>Set Weekly Budget</h2>
