--- a/index.html
+++ b/index.html
@@ -133,11 +133,9 @@
   </style>
 </head>
 <body>
-  <div style="display: flex; justify-content: flex-end; padding: 1rem;">
-    <button id="auth">Login / Sign Up</button>
-  </div>
-
   <div class="container">
+  <div class="header">
+    <button id="auth">Login / Sign Up</button>
     <h1>Weekly Budget Tracker</h1>
     <div class="week-display" id="week-range">Loading week...</div>
 
