--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 	<option value="Home Depot">Home Depot</option>
         <option value="Walmart">Walmart</option>
         <option value="Costco">Costco</option>
+	<option value="Miscellaneous">Miscellaneous</option>
         <option value="Freshco">Freshco</option>
       </select>
       <input type="number" id="amount" placeholder="Amount in dollars" required />
